--- a/JSVM/H264Extension/data/encoder.cfg
+++ b/JSVM/H264Extension/data/encoder.cfg
@@ -1,14 +1,14 @@
 # Scalable H.264/AVC Extension Configuration File
 
 #============================== GENERAL ==============================
-OutputFile              test.264               # Bitstream file
+OutputFile              test_rel.264               # Bitstream file
 FrameRate               30.0                   # Maximum frame rate [Hz]
 MaxDelay                1200.0                 # Maximum structural delay [ms]
-FramesToBeEncoded       5                      # Number of frames (at input frame rate)
+FramesToBeEncoded       9                      # Number of frames (at input frame rate)
 QLevelEst               0                      # QualityLevel Estimation
 
 #============================== MCTF ==============================
-GOPSize                 4                      # GOP Size (at maximum frame rate)
+GOPSize                 8                      # GOP Size (at maximum frame rate)
 IntraPeriod             -1                     # Intra Period
 NumberReferenceFrames   1                      # Number of reference pictures
 BaseLayerMode           1                      # Base layer mode (0:Scalable,
@@ -30,11 +30,10 @@ LoopFilterAlphaC0Offset 0                      # AlphaOffset(-6..+6): valid rang
 LoopFilterBetaOffset    0                      # BetaOffset (-6..+6): valid range
 
 #============================== LAYER DEFINITION ==============================
-NumLayers               2                        # Number of layers
+NumLayers               1                        # Number of layers
 LayerCfg                ..\..\..\data\layer0.cfg # Layer configuration file
-LayerCfg                ..\..\..\data\layer1.cfg # Layer configuration file
 
 #============================== ADAPTIVE GOP STRUCTURE ==============================
 UseAdaptiveGOP          0                      # Use adaptive GOP structure (0: no, 1: yes)
 AGSModeDecision         0                      # Mode decision (0: AGS Coding, 1: Mode Dec)
-AGSGOPModeFile          ags\mode.dat           # GOP mode file
+AGSGOPModeFile          ags_mode.dat           # GOP mode file
