--- a/JSVM/H264Extension/data/encoder.cfg
+++ b/JSVM/H264Extension/data/encoder.cfg
@@ -1,27 +1,28 @@
 # Scalable H.264/AVC Extension Configuration File
 
 #============================== GENERAL ==============================
-OutputFile              test_rel.264               # Bitstream file
-FrameRate               30.0                   # Maximum frame rate [Hz]
+OutputFile              test.264               # Bitstream file
+FrameRate               60.0                   # Maximum frame rate [Hz]
 MaxDelay                1200.0                 # Maximum structural delay [ms]
-FramesToBeEncoded       9                      # Number of frames (at input frame rate)
+FramesToBeEncoded       600                    # Number of frames (at input frame rate)
 QLevelEst               0                      # QualityLevel Estimation
 
 #============================== MCTF ==============================
-GOPSize                 8                      # GOP Size (at maximum frame rate)
-IntraPeriod             -1                     # Intra Period
+GOPSize                 64                     # GOP Size (at maximum frame rate)
+IntraPeriod             64                     # Intra Period
 NumberReferenceFrames   1                      # Number of reference pictures
-BaseLayerMode           1                      # Base layer mode (0:Scalable,
+BaseLayerMode           0                      # Base layer mode (0:Scalable,
                                                #   1:AVC compatible, 2:AVC w subseq SEI)
+
 #============================== MOTION SEARCH ==============================
 SearchMode              4                      # Search mode (0:BlockSearch, 4:FastSearch)
 SearchFuncFullPel       3                      # Search function full pel
                                                #   (0:SAD, 1:SSE, 2:HADAMARD, 3:SAD-YUV) 
 SearchFuncSubPel        2                      # Search function sub pel
                                                #   (0:SAD, 1:SSE, 2:HADAMARD) 
-SearchRange             96                     # Search range (Full Pel)
-BiPredIter              4                      # Max iterations for bi-pred search
-IterSearchRange         8                      # Search range for iterations (0: normal)
+SearchRange             32 #96                     # Search range (Full Pel)
+BiPredIter              1 #4                      # Max iterations for bi-pred search
+IterSearchRange         2 #8                      # Search range for iterations (0: normal)
 
 #============================== LOOP FILTER ==============================
 LoopFilterDisable       0                      # Loop filter idc (0: on, 1: off, 2:
@@ -34,6 +35,6 @@ NumLayers               1                        # Number of layers
 LayerCfg                ..\..\..\data\layer0.cfg # Layer configuration file
 
 #============================== ADAPTIVE GOP STRUCTURE ==============================
-UseAdaptiveGOP          0                      # Use adaptive GOP structure (0: no, 1: yes)
+UseAdaptiveGOP		    0                      # Use adaptive GOP structure (0: no, 1: yes)
 AGSModeDecision         0                      # Mode decision (0: AGS Coding, 1: Mode Dec)
 AGSGOPModeFile          ags_mode.dat           # GOP mode file
