--- a/JSVM/H264Extension/data/layer0.cfg
+++ b/JSVM/H264Extension/data/layer0.cfg
@@ -3,13 +3,13 @@
 #============================== INPUT / OUTPUT ==============================
 SourceWidth     176                     # Input  frame width
 SourceHeight    144                     # Input  frame height
-FrameRateIn     15                      # Input  frame rate [Hz]
-FrameRateOut    15                      # Output frame rate [Hz]
-InputFile       E:/Sequences/SVC/BUS_QCIF15.yuv # Input  file
-ReconFile       rec_layer0.yuv          # Reconstructed file
+FrameRateIn     30                      # Input  frame rate [Hz]
+FrameRateOut    30                      # Output frame rate [Hz]
+InputFile       E:\sequences\svc\test.yuv     # Input  file
+ReconFile       rec_layer0.yuv # Reconstructed file
 
 #============================== DECOMPOSITION (MCTF) ==============================
-UpdateStep      0                       # Update Step (0: no 1: yes)
+UpdateStep      1                       # Update Step (0: no 1: yes)
 ClosedLoop      0                       # Closed-loop control (0:off, 1:at H rate, 2: at L+H rate)
 AdaptiveQP      1                       # QP selection (0: standard, 1: adaptive)
 UseIntra        1                       # Intra mode usage (0: off, 1: on)
@@ -17,20 +17,20 @@ FRExt           1                       # FREXT mode (0:off, 1:on)
 
 #============================== CODING (MCTF) ==============================
 MaxDeltaQP      1                       # Max. absolute delta QP
-QP              32.00                   # Quantization parameters
-NumFGSLayers    0                       # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
+QP              33.0                    # Quantization parameters
+NumFGSLayers    0.0                     # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
 
 #============================== CONTROL (MCTF) ==============================
-MeQP0           32.00                   # QP for motion estimation / mode decision (stage 0)
-MeQP1           32.00                   # QP for motion estimation / mode decision (stage 1)
-MeQP2           32.00                   # QP for motion estimation / mode decision (stage 2)
-MeQP3           32.00                   # QP for motion estimation / mode decision (stage 3)
-MeQP4           32.00                   # QP for motion estimation / mode decision (stage 4)
-MeQP5           32.00                   # QP for motion estimation / mode decision (stage 5)
+MeQP0           30.00                   # QP for motion estimation / mode decision (stage 0)
+MeQP1           30.00                   # QP for motion estimation / mode decision (stage 1)
+MeQP2           30.00                   # QP for motion estimation / mode decision (stage 2)
+MeQP3           30.00                   # QP for motion estimation / mode decision (stage 3)
+MeQP4           30.00                   # QP for motion estimation / mode decision (stage 4)
+MeQP5           30.00                   # QP for motion estimation / mode decision (stage 5)
 
-InterLayerPred  0                       # Inter-layer Prediction (0: no, 1: yes, 2:adaptive)
+InterLayerPred  2                       # Inter-layer Prediction (0: no, 1: yes, 2:adaptive)
 BaseQuality     3                       # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
-DecodeLoops     0                       # Decoding loops (0:single, 1:mult for LP, 2:multiple)
+DecodeLoops     1                       # Decoding loops (0:single, 1:mult for LP, 2:multiple)
 
-MotionInfoMode  0                       # Motion Info Mode (0:no, 1:load, 2:save )
-MotionInfoFile  layer0.mot              # Motion Info File
+MotionInfoMode  2                       # Motion Info Mode (0:no, 1:load, 2:save )
+MotionInfoFile  layer0.mot     # Motion Info File
