--- a/JSVM/H264Extension/data/layer2.cfg
+++ b/JSVM/H264Extension/data/layer2.cfg
@@ -1,44 +1,38 @@
 # Layer Configuration File
 
 #============================== INPUT / OUTPUT ==============================
-SourceWidth     704                     # Input  frame width
-SourceHeight    576                     # Input  frame height
+SourceWidth     352                     # Input  frame width
+SourceHeight    288                     # Input  frame height
 FrameRateIn     30                      # Input  frame rate [Hz]
 FrameRateOut    30                      # Output frame rate [Hz]
-InputFile       E:/Sequences/SVC/CITY_4CIF30.yuv # Input  file
+InputFile       E:\sequences\svc\CITY_CIF30.yuv # Input  file
 ReconFile       rec_layer2.yuv          # Reconstructed file
 
 #============================== DECOMPOSITION (MCTF) ==============================
-UpdateStep      1                       # Update Step (0: no 1: yes)
-ClosedLoop      0                       # Closed-loop control (0:off, 1:at H rate, 2: at L+H rate)
+UpdateStep      0                       # Update Step (0: no 1: yes)
+ClosedLoop      2                       # Closed-loop control (0:off, 1:at H rate, 2: at L+H rate)
 AdaptiveQP      1                       # QP selection (0: standard, 1: adaptive)
 UseIntra        1                       # Intra mode usage (0: off, 1: on)
 FRExt           1                       # FREXT mode (0:off, 1:on)
 
 #============================== CODING (MCTF) ==============================
 MaxDeltaQP      1                       # Max. absolute delta QP
-QP              32.00                   # Quantization parameters
-NumFGSLayers    2                       # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
+QP              34.00                   # Quantization parameters
+NumFGSLayers    3                       # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
 
 #============================== CONTROL (MCTF) ==============================
-MeQP0           32.00                   # QP for motion estimation / mode decision (stage 0)
-MeQP1           32.00                   # QP for motion estimation / mode decision (stage 1)
-MeQP2           32.00                   # QP for motion estimation / mode decision (stage 2)
-MeQP3           32.00                   # QP for motion estimation / mode decision (stage 3)
-MeQP4           32.00                   # QP for motion estimation / mode decision (stage 4)
-MeQP5           32.00                   # QP for motion estimation / mode decision (stage 5)
+MeQP0           36.00                   # QP for motion estimation / mode decision (stage 0)
+MeQP1           36.00                   # QP for motion estimation / mode decision (stage 1)
+MeQP2           36.00                   # QP for motion estimation / mode decision (stage 2)
+MeQP3           36.00                   # QP for motion estimation / mode decision (stage 3)
+MeQP4           36.00                   # QP for motion estimation / mode decision (stage 4)
+MeQP5           36.00                   # QP for motion estimation / mode decision (stage 5)
 
 InterLayerPred  2                       # Inter-layer Prediction (0: no, 1: yes, 2:adaptive)
-BaseQuality     1                       # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
-DecodeLoops     1                       # Decoding loops (0:single, 1:mult for LP, 2:multiple)
+BaseQuality     3                       # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
+DecodeLoops     0                       # Decoding loops (0:single, 1:mult for LP, 2:multiple)
 
-MotionInfoMode  2                       # Motion Info Mode (0:no, 1:load, 2:save )
+MotionInfoMode  0                       # Motion Info Mode (0:no, 1:load, 2:save )
 MotionInfoFile  layer2.mot              # Motion Info File
 
-#==================== EXTENDED SPATIAL SCALABILITY ======================
-UseESS          0                       # ESS (0: no, 1: sequence level, 2: pic level)
-ESSPicParamFile cfg/BUS_ESS2.dat        # Picture level parameters file name
-ESSCropWidth    640                     # Cropping width
-ESSCropHeight   512                     # Cropping height
-ESSOriginX      24                      # Cropping origin X
-ESSOriginY      16                      # Cropping origin Y
+ForceReOrdering 0                       # always use re-ordering commands (frame loss detection)
