--- a/JSVM/H264Extension/data/layer2.cfg
+++ b/JSVM/H264Extension/data/layer2.cfg
@@ -1,38 +1,38 @@
 # Layer Configuration File
 
 #============================== INPUT / OUTPUT ==============================
-SourceWidth     352                     # Input  frame width
-SourceHeight    288                     # Input  frame height
-FrameRateIn     30                      # Input  frame rate [Hz]
-FrameRateOut    30                      # Output frame rate [Hz]
-InputFile       E:\sequences\svc\CITY_CIF30.yuv # Input  file
-ReconFile       rec_layer2.yuv          # Reconstructed file
+SourceWidth     176                     # Input  frame width
+SourceHeight    144                     # Input  frame height
+FrameRateIn     15                      # Input  frame rate [Hz]
+FrameRateOut    15                      # Output frame rate [Hz]
+InputFile       E:\sequences\svc\City_QCIF15.yuv     # Input  file
+ReconFile       rec_layer2.yuv # Reconstructed file
 
 #============================== DECOMPOSITION (MCTF) ==============================
 UpdateStep      0                       # Update Step (0: no 1: yes)
-ClosedLoop      2                       # Closed-loop control (0:off, 1:at H rate, 2: at L+H rate)
+ClosedLoop      1                       # Closed-loop control (0:off, 1:at H rate, 2: at L+H rate)
 AdaptiveQP      1                       # QP selection (0: standard, 1: adaptive)
 UseIntra        1                       # Intra mode usage (0: off, 1: on)
 FRExt           1                       # FREXT mode (0:off, 1:on)
 
 #============================== CODING (MCTF) ==============================
 MaxDeltaQP      1                       # Max. absolute delta QP
-QP              34.00                   # Quantization parameters
-NumFGSLayers    3                       # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
+QP              23.0                    # Quantization parameters
+NumFGSLayers    0.0                     # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
 
 #============================== CONTROL (MCTF) ==============================
-MeQP0           36.00                   # QP for motion estimation / mode decision (stage 0)
-MeQP1           36.00                   # QP for motion estimation / mode decision (stage 1)
-MeQP2           36.00                   # QP for motion estimation / mode decision (stage 2)
-MeQP3           36.00                   # QP for motion estimation / mode decision (stage 3)
-MeQP4           36.00                   # QP for motion estimation / mode decision (stage 4)
-MeQP5           36.00                   # QP for motion estimation / mode decision (stage 5)
+MeQP0           20.00                   # QP for motion estimation / mode decision (stage 0)
+MeQP1           20.00                   # QP for motion estimation / mode decision (stage 1)
+MeQP2           20.00                   # QP for motion estimation / mode decision (stage 2)
+MeQP3           20.00                   # QP for motion estimation / mode decision (stage 3)
+MeQP4           20.00                   # QP for motion estimation / mode decision (stage 4)
+MeQP5           20.00                   # QP for motion estimation / mode decision (stage 5)
 
 InterLayerPred  2                       # Inter-layer Prediction (0: no, 1: yes, 2:adaptive)
 BaseQuality     3                       # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
-DecodeLoops     0                       # Decoding loops (0:single, 1:mult for LP, 2:multiple)
+DecodeLoops     2                       # Decoding loops (0:single, 1:mult for LP, 2:multiple)
 
 MotionInfoMode  0                       # Motion Info Mode (0:no, 1:load, 2:save )
-MotionInfoFile  layer2.mot              # Motion Info File
+MotionInfoFile  layer2.mot     # Motion Info File
 
-ForceReOrdering 0                       # always use re-ordering commands (frame loss detection)
+BaseLayerId     0 # base layer
