--- a/JSVM/H264Extension/src/test/BitStreamExtractor/BitStreamExtractor.vcproj
+++ b/JSVM/H264Extension/src/test/BitStreamExtractor/BitStreamExtractor.vcproj
@@ -207,6 +207,12 @@
 						PreprocessorDefinitions=""/>
 				</FileConfiguration>
 			</File>
+			<File
+				RelativePath=".\ScalableModifyCode.cpp">
+			</File>
+			<File
+				RelativePath=".\ScalableTestCode.cpp">
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -219,6 +225,12 @@
 			</File>
 			<File
 				RelativePath="ExtractorParameter.h">
+			</File>
+			<File
+				RelativePath=".\ScalableModifyCode.h">
+			</File>
+			<File
+				RelativePath=".\ScalableTestCode.h">
 			</File>
 		</Filter>
 		<Filter
