--- a/JSVM/H264Extension/data/encoder.cfg
+++ b/JSVM/H264Extension/data/encoder.cfg
@@ -20,9 +20,9 @@ SearchFuncFullPel       3                      # Search function full pel
                                                #   (0:SAD, 1:SSE, 2:HADAMARD, 3:SAD-YUV) 
 SearchFuncSubPel        2                      # Search function sub pel
                                                #   (0:SAD, 1:SSE, 2:HADAMARD) 
-SearchRange             32 #96                     # Search range (Full Pel)
-BiPredIter              1 #4                      # Max iterations for bi-pred search
-IterSearchRange         2 #8                      # Search range for iterations (0: normal)
+SearchRange             96                     # Search range (Full Pel)
+BiPredIter              4                      # Max iterations for bi-pred search
+IterSearchRange         8                      # Search range for iterations (0: normal)
 
 #============================== LOOP FILTER ==============================
 LoopFilterDisable       0                      # Loop filter idc (0: on, 1: off, 2:
@@ -31,10 +31,8 @@ LoopFilterAlphaC0Offset 0                      # AlphaOffset(-6..+6): valid rang
 LoopFilterBetaOffset    0                      # BetaOffset (-6..+6): valid range
 
 #============================== LAYER DEFINITION ==============================
-NumLayers               3                        # Number of layers
+NumLayers               1                        # Number of layers
 LayerCfg                ..\..\..\data\layer0.cfg # Layer configuration file
-LayerCfg                ..\..\..\data\layer1.cfg # Layer configuration file
-LayerCfg                ..\..\..\data\layer2.cfg # Layer configuration file
 
 #============================== ADAPTIVE GOP STRUCTURE ==============================
 UseAdaptiveGOP		    0                      # Use adaptive GOP structure (0: no, 1: yes)
