--- a/JSVM/H264Extension/data/encoder.cfg
+++ b/JSVM/H264Extension/data/encoder.cfg
@@ -2,9 +2,9 @@
 
 #============================== GENERAL ==============================
 OutputFile              test.264               # Bitstream file
-FrameRate               15.0                   # Maximum frame rate [Hz]
+FrameRate               30.0                   # Maximum frame rate [Hz]
 MaxDelay                1200.0                 # Maximum structural delay [ms]
-FramesToBeEncoded       50                     # Number of frames (at input frame rate)
+FramesToBeEncoded       17                     # Number of frames (at input frame rate)
 QLevelEst               0                      # QualityLevel Estimation
 
 #============================== MCTF ==============================
@@ -31,8 +31,9 @@ LoopFilterAlphaC0Offset 0                      # AlphaOffset(-6..+6): valid rang
 LoopFilterBetaOffset    0                      # BetaOffset (-6..+6): valid range
 
 #============================== LAYER DEFINITION ==============================
-NumLayers               1                        # Number of layers
+NumLayers               2                        # Number of layers
 LayerCfg                ..\..\..\data\layer0.cfg # Layer configuration file
+LayerCfg                ..\..\..\data\layer1.cfg # Layer configuration file
 
 #============================== ADAPTIVE GOP STRUCTURE ==============================
 UseAdaptiveGOP		    0                      # Use adaptive GOP structure (0: no, 1: yes)
