--- a/JSVM/H264Extension/data/layer1.cfg
+++ b/JSVM/H264Extension/data/layer1.cfg
@@ -3,9 +3,9 @@
 #============================== INPUT / OUTPUT ==============================
 SourceWidth     352                     # Input  frame width
 SourceHeight    288                     # Input  frame height
-FrameRateIn     15                      # Input  frame rate [Hz]
-FrameRateOut    15                      # Output frame rate [Hz]
-InputFile       E:\sequences\svc\City_CIF15.yuv     # Input  file
+FrameRateIn     30                      # Input  frame rate [Hz]
+FrameRateOut    30                      # Output frame rate [Hz]
+InputFile       E:\sequences\svc\BUS_CIF30.yuv     # Input  file
 ReconFile       rec_layer1.yuv          # Reconstructed file
 SymbolMode      1                       # 0=CAVLC, 1=CABAC
 
@@ -19,7 +19,7 @@ FRExt           1                       # FREXT mode (0:off, 1:on)
 #============================== CODING (MCTF) ==============================
 MaxDeltaQP      1                       # Max. absolute delta QP
 QP              33.0                    # Quantization parameters
-NumFGSLayers    0.0                     # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
+NumFGSLayers    1.0                     # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
 
 #============================== CONTROL (MCTF) ==============================
 MeQP0           30.00                   # QP for motion estimation / mode decision (stage 0)
@@ -31,7 +31,7 @@ MeQP5           30.00                   # QP for motion estimation / mode decisi
 
 InterLayerPred  2                       # Inter-layer Prediction (0: no, 1: yes, 2:adaptive)
 BaseQuality     3                       # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
-DecodeLoops     2                       # Decoding loops (0:single, 1:mult for LP, 2:multiple)
+DecodeLoops     0                       # Decoding loops (0:single, 1:mult for LP, 2:multiple)
 
 MotionInfoMode  0                       # Motion Info Mode (0:no, 1:load, 2:save )
 MotionInfoFile  layer1.mot              # Motion Info File
